# datavault-spark-minio-delta

./: .gitattributes  .gitignore  docker-compose.yml  fix_minio_setup.sh  pyproject.toml  readme.md
jupyter/: Dockerfile
notebooks/: data_vault_modeling.ipynb
scripts/: download_dataset.sh
